--- a/RadiusR.API.CustomerWebService/packages.config
+++ b/RadiusR.API.CustomerWebService/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NLog" version="4.5.6" targetFramework="net472" />
+  <package id="OpenPop.NET" version="2.0.6.1120" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="RadiusR.Address" version="1.0.0" targetFramework="net472" />
   <package id="RadiusR.Address.QueryInterface" version="1.0.0" targetFramework="net472" />
@@ -38,6 +39,7 @@
   <package id="RezaB.Files" version="1.0.1" targetFramework="net472" />
   <package id="RezaB.Files.FTP" version="1.0.2" targetFramework="net472" />
   <package id="RezaB.Files.Local" version="1.0.1" targetFramework="net472" />
+  <package id="RezaB.Mailing" version="1.0.1" targetFramework="net472" />
   <package id="RezaB.NetInvoice" version="1.0.0" targetFramework="net472" />
   <package id="RezaB.NetInvoice.Wrapper" version="1.0.0" targetFramework="net472" />
   <package id="RezaB.TurkTelekom.WebServices" version="1.0.0" targetFramework="net472" />
