#edited nlog config

--- a/RadiusR.API.CustomerWebService/packages.config
+++ b/RadiusR.API.CustomerWebService/packages.config
@@ -11,7 +11,7 @@
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="NLog" version="4.5.6" targetFramework="net472" />
+  <package id="NLog" version="4.7.6" targetFramework="net472" />
   <package id="OpenPop.NET" version="2.0.6.1120" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="RadiusR.Address" version="1.0.0" targetFramework="net472" />
@@ -34,6 +34,7 @@
   <package id="RezaB.API.MobilExpress" version="1.0.0" targetFramework="net472" />
   <package id="RezaB.API.TCKValidation" version="1.0.0" targetFramework="net472" />
   <package id="RezaB.API.WebService" version="1.1.7" targetFramework="net472" />
+  <package id="RezaB.API.WebService.NLogExtentions" version="1.0.0" targetFramework="net472" />
   <package id="RezaB.Data" version="1.0.1" targetFramework="net472" />
   <package id="RezaB.DBUtilities" version="1.0.0" targetFramework="net472" />
   <package id="RezaB.Files" version="1.0.1" targetFramework="net472" />
