--- a/RadiusR.API.CustomerWebService/NLog.config
+++ b/RadiusR.API.CustomerWebService/NLog.config
@@ -22,8 +22,10 @@
     See https://github.com/nlog/NLog/wiki/Targets for possible targets.
     See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
     -->
-    <target name="sms_internal" xsi:type="File" createDirs="true" fileName="${basedir}/logs/${logger}/${date:format=yyyy}/${date:format=MM}/${date:format=dd}.log" layout="[${level}][${longdate}]=====&gt;${message}${newline}${exception:format=toString,Data}"/>
-    <target name="Errors" xsi:type="File" createDirs="true" fileName="Logs/${logger}/${date:format=yyyy}/${date:format=MM}/${date:format=dd}.log" layout="=====&gt; [${callsite}][${level}] [${longdate}]${newline}${message}${newline}${exception:format=toString,Data}${newline}" />
+    <target xsi:type="File" name="Unpaid" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
+    <target xsi:type="File" name="Paid" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
+    <target xsi:type="File" name="Errors" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
+    <target xsi:type="File" name="sms_internal" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
     <!--
     Write events to a file with the date in the filename.
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
@@ -38,7 +40,9 @@
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
     <logger name="*" minlevel="Debug" writeTo="f" />
     -->
-    <logger minlevel="Error" writeTo="sms_internal" name="SMSInternal" final="true"/>
     <logger name="Errors" final="true" writeTo="Errors"/>
+    <logger name="Paid" final="true" writeTo="Paid"/>
+    <logger name="Unpaid" final="true" writeTo="Unpaid"/>
+    <logger writeTo="sms_internal" name="SMSInternal" final="true"/>
   </rules>
 </nlog>
