# telekom infrastructure added # change client info added

--- a/RadiusR.API.CustomerWebService/Web.config
+++ b/RadiusR.API.CustomerWebService/Web.config
@@ -71,6 +71,9 @@
     <service name="RadiusR.API.CustomerWebService.GenericCustomerService">
       <endpoint address="GenericCustomerService.svc" binding="wsHttpBinding" bindingConfiguration="MainBinding" contract="RadiusR.API.CustomerWebService.IGenericCustomerService" />
     </service>
+    <service name="RadiusR.API.CustomerWebService.PartnerService">
+      <endpoint address="PartnerService.svc" binding="wsHttpBinding" bindingConfiguration="MainBinding" contract="RadiusR.API.CustomerWebService.IPartnerService" />
+    </service>
   </services>
     <bindings>
       <wsHttpBinding>
