--- a/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
+++ b/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
@@ -115,8 +115,8 @@
     <Reference Include="RadiusR.API.MobilExpress.DBAdapter, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RadiusR.API.MobilExpress.DBAdapter.1.0.0\lib\net452\RadiusR.API.MobilExpress.DBAdapter.dll</HintPath>
     </Reference>
-    <Reference Include="RadiusR.DB, Version=1.1.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RadiusR.DB.1.1.5\lib\net452\RadiusR.DB.dll</HintPath>
+    <Reference Include="RadiusR.DB, Version=1.1.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RadiusR.DB.1.1.7\lib\net452\RadiusR.DB.dll</HintPath>
     </Reference>
     <Reference Include="RadiusR.DB.DomainsCache, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RadiusR.DB.DomainsCache.1.0.0\lib\net452\RadiusR.DB.DomainsCache.dll</HintPath>
@@ -130,8 +130,8 @@
     <Reference Include="RadiusR.DB.Utilities.ComplexOperations, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RadiusR.DB.Utilities.ComplexOperations.1.0.3\lib\net452\RadiusR.DB.Utilities.ComplexOperations.dll</HintPath>
     </Reference>
-    <Reference Include="RadiusR.FileManagement, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RadiusR.FileManagement.1.1.1\lib\net472\RadiusR.FileManagement.dll</HintPath>
+    <Reference Include="RadiusR.FileManagement, Version=1.1.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RadiusR.FileManagement.1.1.3\lib\net472\RadiusR.FileManagement.dll</HintPath>
     </Reference>
     <Reference Include="RadiusR.Localization, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RadiusR.Localization.1.0.2\lib\net452\RadiusR.Localization.dll</HintPath>
@@ -252,11 +252,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="GenericCustomerService.svc" />
+    <Content Include="PartnerService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonResponse.cs" />
     <Compile Include="Enums\ErrorCodes.cs" />
+    <Compile Include="Enums\PartnerErrorCodes.cs" />
     <Compile Include="Enums\SubscriptionPaidType.cs" />
     <Compile Include="Enums\SupportMesssageTypes.cs" />
     <Compile Include="Enums\SupportRequestAvailableTypes.cs" />
@@ -264,6 +266,7 @@
       <DependentUpon>GenericCustomerService.svc</DependentUpon>
     </Compile>
     <Compile Include="IGenericCustomerService.cs" />
+    <Compile Include="IPartnerService.cs" />
     <Compile Include="Localization\Common.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -284,12 +287,19 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ErrorMessages.tr-tr.resx</DependentUpon>
     </Compile>
+    <Compile Include="PartnerService.svc.cs">
+      <DependentUpon>PartnerService.svc</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Requests\ChangeClientInfoConfirmRequest.cs" />
+    <Compile Include="Requests\ChangeClientInfoRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\RequestBase.cs" />
+    <Compile Include="Requests\PartnerRequests\PaymentRequest.cs" />
     <Compile Include="Requests\Payment\ActivateAutomaticPaymentRequest.cs" />
     <Compile Include="Requests\Payment\AddCardRequest.cs" />
     <Compile Include="Requests\AddressDetailsRequest.cs" />
@@ -331,8 +341,11 @@
     <Compile Include="Requests\Support\SupportTypesRequest.cs" />
     <Compile Include="Requests\Support\SaveSupportAttachmentRequest.cs" />
     <Compile Include="Requests\Payment\VPOSFormRequest.cs" />
+    <Compile Include="Responses\ChangeClientInfoConfirmResponse.cs" />
+    <Compile Include="Responses\ChangeClientInfoResponse.cs" />
     <Compile Include="Responses\GetClientPDFFormResponse.cs" />
     <Compile Include="Responses\HasClientPreRegisterResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\PaymentResponse.cs" />
     <Compile Include="Responses\Payment\ActivateAutomaticPaymentResponse.cs" />
     <Compile Include="Responses\Payment\AddCardResponse.cs" />
     <Compile Include="Responses\Payment\AddCardSMSValidationResponse.cs" />
@@ -423,6 +436,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RadiusR.API.TelekomInfrastructureService\RadiusR.API.TelekomInfrastructureService.csproj">
+      <Project>{592c6b07-bb8b-4d3c-b9e5-8808d1e59cc6}</Project>
+      <Name>RadiusR.API.TelekomInfrastructureService</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
