--- a/RadiusR.API.CustomerWebService/Web.config
+++ b/RadiusR.API.CustomerWebService/Web.config
@@ -79,7 +79,7 @@
       <wsHttpBinding>
         <binding name="MainBinding" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
           <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647"
-					  maxNameTableCharCount="2147483647"/>
+       maxNameTableCharCount="2147483647"/>
           <security mode="None"/>
         </binding>
       </wsHttpBinding>
@@ -180,9 +180,12 @@
 </system.codedom>
 <applicationSettings>
         <RadiusR.API.CustomerWebService.Properties.Settings>
-            <setting name="CacheDuration" serializeAs="String">
-                <value>00:15:00</value>
-            </setting>
+                <setting name="CacheDuration" serializeAs="String">
+                        <value>00:15:00</value>
+                </setting>
+                <setting name="EArchiveDisplayAddress" serializeAs="String">
+                        <value>noreply@netspeed.com.tr</value>
+                </setting>
         </RadiusR.API.CustomerWebService.Properties.Settings>
     </applicationSettings>
 </configuration>
