# added new functions

--- a/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
+++ b/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
@@ -299,9 +299,14 @@
     <Compile Include="Requests\ChangeClientInfoConfirmRequest.cs" />
     <Compile Include="Requests\ChangeClientInfoRequest.cs" />
     <Compile Include="Requests\ChangeClientOnlinePasswordRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\AddSubUserRequest.cs" />
     <Compile Include="Requests\PartnerRequests\AuthenticationRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\BillListRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\ListFromIDRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\ParameterlessRequest.cs" />
     <Compile Include="Requests\PartnerRequests\RequestBase.cs" />
     <Compile Include="Requests\PartnerRequests\PaymentRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\SubUserRequest.cs" />
     <Compile Include="Requests\Payment\ActivateAutomaticPaymentRequest.cs" />
     <Compile Include="Requests\Payment\AddCardRequest.cs" />
     <Compile Include="Requests\AddressDetailsRequest.cs" />
@@ -347,8 +352,13 @@
     <Compile Include="Responses\ChangeClientInfoResponse.cs" />
     <Compile Include="Responses\GetClientPDFFormResponse.cs" />
     <Compile Include="Responses\HasClientPreRegisterResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\AddSubUserResponse.cs" />
     <Compile Include="Responses\PartnerResponses\AuthenticationResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\BillListResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\KeyValueListResponse.cs" />
     <Compile Include="Responses\PartnerResponses\PaymentResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\ResponseValidationBase.cs" />
+    <Compile Include="Responses\PartnerResponses\SubUserResponse.cs" />
     <Compile Include="Responses\Payment\ActivateAutomaticPaymentResponse.cs" />
     <Compile Include="Responses\Payment\AddCardResponse.cs" />
     <Compile Include="Responses\Payment\AddCardSMSValidationResponse.cs" />
