# added all partner functions # added tck validation (extra)

--- a/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
+++ b/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
@@ -302,10 +302,14 @@
     <Compile Include="Requests\PartnerRequests\AddSubUserRequest.cs" />
     <Compile Include="Requests\PartnerRequests\AuthenticationRequest.cs" />
     <Compile Include="Requests\PartnerRequests\BillListRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\CreditReportRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\IDCardValidationRequest.cs" />
     <Compile Include="Requests\PartnerRequests\ListFromIDRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\NewCustomerRegisterRequest.cs" />
     <Compile Include="Requests\PartnerRequests\ParameterlessRequest.cs" />
     <Compile Include="Requests\PartnerRequests\RequestBase.cs" />
     <Compile Include="Requests\PartnerRequests\PaymentRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\SMSCodeRequest.cs" />
     <Compile Include="Requests\PartnerRequests\SubUserRequest.cs" />
     <Compile Include="Requests\Payment\ActivateAutomaticPaymentRequest.cs" />
     <Compile Include="Requests\Payment\AddCardRequest.cs" />
@@ -355,9 +359,13 @@
     <Compile Include="Responses\PartnerResponses\AddSubUserResponse.cs" />
     <Compile Include="Responses\PartnerResponses\AuthenticationResponse.cs" />
     <Compile Include="Responses\PartnerResponses\BillListResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\CreditReportResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\IDCardValidationResponse.cs" />
     <Compile Include="Responses\PartnerResponses\KeyValueListResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\NewCustomerRegisterResponse.cs" />
     <Compile Include="Responses\PartnerResponses\PaymentResponse.cs" />
     <Compile Include="Responses\PartnerResponses\ResponseValidationBase.cs" />
+    <Compile Include="Responses\PartnerResponses\SMSCodeResponse.cs" />
     <Compile Include="Responses\PartnerResponses\SubUserResponse.cs" />
     <Compile Include="Responses\Payment\ActivateAutomaticPaymentResponse.cs" />
     <Compile Include="Responses\Payment\AddCardResponse.cs" />
