#added request logs

--- a/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
+++ b/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
@@ -253,6 +253,7 @@
   <ItemGroup>
     <Content Include="GenericCustomerService.svc" />
     <Content Include="PartnerService.svc" />
+    <Content Include="VersionHistory.txt" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
