--- a/RadiusR.API.CustomerWebService/NLog.config
+++ b/RadiusR.API.CustomerWebService/NLog.config
@@ -28,6 +28,7 @@
     <target xsi:type="File" name="sms_internal" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
     <target xsi:type="File" name="PartnerErrors" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
     <target xsi:type="File" name="PartnerInComingInfo" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
+    <target xsi:type="File" name="CustomerInComingInfo" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
     <!--
     Write events to a file with the date in the filename.
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
@@ -44,6 +45,7 @@
     -->
     <logger name="Errors" final="true" writeTo="Errors"/>
     <logger name="PartnerErrors" final="true" writeTo="PartnerErrors"/>
+    <logger name="CustomerInComingInfo" final="true" writeTo="CustomerInComingInfo"/>
     <logger name="PartnerInComingInfo" final="true" writeTo="PartnerInComingInfo"/>
     <logger name="Paid" final="true" writeTo="Paid"/>
     <logger name="Unpaid" final="true" writeTo="Unpaid"/>
