# fixed issues for localization

--- a/RadiusR.API.CustomerWebService/NLog.config
+++ b/RadiusR.API.CustomerWebService/NLog.config
@@ -45,7 +45,7 @@
     -->
     <logger name="Errors" final="true" writeTo="Errors"/>
     <logger name="PartnerErrors" final="true" writeTo="PartnerErrors"/>
-    <logger name="CustomerInComingInfo" final="true" writeTo="CustomerInComingInfo"/>
+    <logger enabled="false" name="CustomerInComingInfo" final="true" writeTo="CustomerInComingInfo"/>
     <logger name="PartnerInComingInfo" final="true" writeTo="PartnerInComingInfo"/>
     <logger name="Paid" final="true" writeTo="Paid"/>
     <logger name="Unpaid" final="true" writeTo="Unpaid"/>
