--- a/RadiusR.API.CustomerWebService/Web.config
+++ b/RadiusR.API.CustomerWebService/Web.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  
-      <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-          <section name="RadiusR.API.CustomerWebService.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-      </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="RadiusR.API.CustomerWebService.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings configSource="Connection.config" />
   <appSettings>
@@ -38,7 +38,12 @@
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
       -->
-    <directoryBrowse enabled="true" />
+    <directoryBrowse enabled="false" />
+    <defaultDocument>
+      <files>
+        <add value="GenericCustomerService.svc"/>
+      </files>
+    </defaultDocument>
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -66,21 +71,26 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<system.serviceModel>
-  <services>
-    <service name="RadiusR.API.CustomerWebService.GenericCustomerService">
-      <endpoint address="GenericCustomerService.svc" binding="wsHttpBinding" bindingConfiguration="MainBinding" contract="RadiusR.API.CustomerWebService.IGenericCustomerService" />
-    </service>
-    <service name="RadiusR.API.CustomerWebService.PartnerService">
-      <endpoint address="PartnerService.svc" binding="wsHttpBinding" bindingConfiguration="MainBinding" contract="RadiusR.API.CustomerWebService.IPartnerService" />
-    </service>
-  </services>
+  <system.serviceModel>
+    <services>
+      <service name="RadiusR.API.CustomerWebService.GenericCustomerService">
+        <endpoint address="GenericCustomerService.svc" binding="wsHttpBinding" bindingConfiguration="MainBinding" contract="RadiusR.API.CustomerWebService.IGenericCustomerService" />
+      </service>
+      <service name="RadiusR.API.CustomerWebService.PartnerService">
+        <endpoint address="PartnerService.svc" binding="wsHttpBinding" bindingConfiguration="MainBinding" contract="RadiusR.API.CustomerWebService.IPartnerService" />
+      </service>
+    </services>
     <bindings>
       <wsHttpBinding>
         <binding name="MainBinding" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
           <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647"
        maxNameTableCharCount="2147483647"/>
+          <!--For Http-->
           <security mode="None"/>
+          <!--For Https-->
+          <!--<security mode="Transport">
+            <transport clientCredentialType="None"/>
+          </security>-->
         </binding>
       </wsHttpBinding>
       <basicHttpBinding>
@@ -172,20 +182,20 @@
       <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
     </client>
   </system.serviceModel>
-<system.codedom>
-<compilers>
+  <system.codedom>
+    <compilers>
       <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:7.3 /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </compilers>
-</system.codedom>
-<applicationSettings>
-        <RadiusR.API.CustomerWebService.Properties.Settings>
-                <setting name="CacheDuration" serializeAs="String">
-                        <value>00:15:00</value>
-                </setting>
-                <setting name="EArchiveDisplayAddress" serializeAs="String">
-                        <value>noreply@netspeed.com.tr</value>
-                </setting>
-        </RadiusR.API.CustomerWebService.Properties.Settings>
-    </applicationSettings>
+  </system.codedom>
+  <applicationSettings>
+    <RadiusR.API.CustomerWebService.Properties.Settings>
+      <setting name="CacheDuration" serializeAs="String">
+        <value>00:15:00</value>
+      </setting>
+      <setting name="EArchiveDisplayAddress" serializeAs="String">
+        <value>noreply@netspeed.com.tr</value>
+      </setting>
+    </RadiusR.API.CustomerWebService.Properties.Settings>
+  </applicationSettings>
 </configuration>
