# added allowence details # created netspeed custom web service

--- a/RadiusR.API.CustomerWebService/Web.config
+++ b/RadiusR.API.CustomerWebService/Web.config
@@ -41,7 +41,9 @@
     <directoryBrowse enabled="false" />
     <defaultDocument>
       <files>
+        <add value="NetspeedCustomerService.svc"/>
         <add value="GenericCustomerService.svc"/>
+        <add value="PartnerService.svc"/>
       </files>
     </defaultDocument>
   </system.webServer>
@@ -75,6 +77,9 @@
     <services>
       <service name="RadiusR.API.CustomerWebService.GenericCustomerService">
         <endpoint address="GenericCustomerService.svc" binding="wsHttpBinding" bindingConfiguration="MainBinding" contract="RadiusR.API.CustomerWebService.IGenericCustomerService" />
+      </service>
+      <service name="RadiusR.API.CustomerWebService.NetspeedCustomerService">
+        <endpoint address="NetspeedCustomerService.svc" binding="wsHttpBinding" bindingConfiguration="MainBinding" contract="RadiusR.API.CustomerWebService.INetspeedCustomerService" />
       </service>
       <service name="RadiusR.API.CustomerWebService.PartnerService">
         <endpoint address="PartnerService.svc" binding="wsHttpBinding" bindingConfiguration="MainBinding" contract="RadiusR.API.CustomerWebService.IPartnerService" />
