--- a/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
+++ b/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
@@ -115,8 +115,8 @@
     <Reference Include="RadiusR.API.MobilExpress.DBAdapter, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RadiusR.API.MobilExpress.DBAdapter.1.0.0\lib\net452\RadiusR.API.MobilExpress.DBAdapter.dll</HintPath>
     </Reference>
-    <Reference Include="RadiusR.DB, Version=1.1.7.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RadiusR.DB.1.1.7\lib\net452\RadiusR.DB.dll</HintPath>
+    <Reference Include="RadiusR.DB, Version=1.2.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RadiusR.DB.1.2.0\lib\net452\RadiusR.DB.dll</HintPath>
     </Reference>
     <Reference Include="RadiusR.DB.DomainsCache, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RadiusR.DB.DomainsCache.1.0.0\lib\net452\RadiusR.DB.DomainsCache.dll</HintPath>
@@ -124,20 +124,20 @@
     <Reference Include="RadiusR.DB.TelekomOperations, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RadiusR.DB.TelekomOperations.1.0.0\lib\net452\RadiusR.DB.TelekomOperations.dll</HintPath>
     </Reference>
-    <Reference Include="RadiusR.DB.Utilities, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RadiusR.DB.Utilities.1.0.1\lib\net452\RadiusR.DB.Utilities.dll</HintPath>
+    <Reference Include="RadiusR.DB.Utilities, Version=1.1.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RadiusR.DB.Utilities.1.1.0\lib\net452\RadiusR.DB.Utilities.dll</HintPath>
     </Reference>
-    <Reference Include="RadiusR.DB.Utilities.ComplexOperations, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RadiusR.DB.Utilities.ComplexOperations.1.0.3\lib\net452\RadiusR.DB.Utilities.ComplexOperations.dll</HintPath>
+    <Reference Include="RadiusR.DB.Utilities.ComplexOperations, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RadiusR.DB.Utilities.ComplexOperations.1.0.4\lib\net452\RadiusR.DB.Utilities.ComplexOperations.dll</HintPath>
     </Reference>
-    <Reference Include="RadiusR.FileManagement, Version=1.1.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RadiusR.FileManagement.1.1.3\lib\net472\RadiusR.FileManagement.dll</HintPath>
+    <Reference Include="RadiusR.FileManagement, Version=1.1.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RadiusR.FileManagement.1.1.4\lib\net472\RadiusR.FileManagement.dll</HintPath>
     </Reference>
-    <Reference Include="RadiusR.Localization, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RadiusR.Localization.1.0.2\lib\net452\RadiusR.Localization.dll</HintPath>
+    <Reference Include="RadiusR.Localization, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RadiusR.Localization.1.0.3\lib\net452\RadiusR.Localization.dll</HintPath>
     </Reference>
-    <Reference Include="RadiusR.Localization.Lists, Version=1.0.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RadiusR.Localization.Lists.1.0.6\lib\net452\RadiusR.Localization.Lists.dll</HintPath>
+    <Reference Include="RadiusR.Localization.Lists, Version=1.0.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RadiusR.Localization.Lists.1.0.7\lib\net452\RadiusR.Localization.Lists.dll</HintPath>
     </Reference>
     <Reference Include="RadiusR.PDFForms, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RadiusR.PDFForms.1.0.1\lib\net472\RadiusR.PDFForms.dll</HintPath>
@@ -252,6 +252,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="GenericCustomerService.svc" />
+    <Content Include="NetspeedCustomerService.svc" />
     <Content Include="PartnerService.svc" />
     <Content Include="VersionHistory.txt" />
     <Content Include="Web.config" />
@@ -267,6 +268,7 @@
       <DependentUpon>GenericCustomerService.svc</DependentUpon>
     </Compile>
     <Compile Include="IGenericCustomerService.cs" />
+    <Compile Include="INetspeedCustomerService.cs" />
     <Compile Include="IPartnerService.cs" />
     <Compile Include="Localization\Common.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -288,6 +290,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ErrorMessages.tr-tr.resx</DependentUpon>
     </Compile>
+    <Compile Include="NetspeedCustomerService.svc.cs">
+      <DependentUpon>NetspeedCustomerService.svc</DependentUpon>
+    </Compile>
     <Compile Include="PartnerService.svc.cs">
       <DependentUpon>PartnerService.svc</DependentUpon>
     </Compile>
@@ -301,6 +306,7 @@
     <Compile Include="Requests\ChangeClientInfoRequest.cs" />
     <Compile Include="Requests\ChangeClientOnlinePasswordRequest.cs" />
     <Compile Include="Requests\PartnerRequests\AddSubUserRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\PartnerAllowanceRequest.cs" />
     <Compile Include="Requests\PartnerRequests\AuthenticationRequest.cs" />
     <Compile Include="Requests\PartnerRequests\BillListRequest.cs" />
     <Compile Include="Requests\PartnerRequests\CreditReportRequest.cs" />
@@ -358,6 +364,7 @@
     <Compile Include="Responses\GetClientPDFFormResponse.cs" />
     <Compile Include="Responses\HasClientPreRegisterResponse.cs" />
     <Compile Include="Responses\PartnerResponses\AddSubUserResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\AllowanceDetailsResponse.cs" />
     <Compile Include="Responses\PartnerResponses\AuthenticationResponse.cs" />
     <Compile Include="Responses\PartnerResponses\BillListResponse.cs" />
     <Compile Include="Responses\PartnerResponses\CreditReportResponse.cs" />
