--- a/RadiusR.API.CustomerWebService/Web.config
+++ b/RadiusR.API.CustomerWebService/Web.config
@@ -3,8 +3,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="RadiusR.API.CustomerWebService.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -41,9 +40,9 @@
     <directoryBrowse enabled="false" />
     <defaultDocument>
       <files>
-        <add value="NetspeedCustomerService.svc"/>
-        <add value="GenericCustomerService.svc"/>
-        <add value="PartnerService.svc"/>
+        <add value="NetspeedCustomerService.svc" />
+        <add value="GenericCustomerService.svc" />
+        <add value="PartnerService.svc" />
       </files>
     </defaultDocument>
   </system.webServer>
@@ -88,10 +87,9 @@
     <bindings>
       <wsHttpBinding>
         <binding name="MainBinding" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
-          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647"
-       maxNameTableCharCount="2147483647"/>
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
           <!--For Http-->
-          <security mode="None"/>
+          <security mode="None" />
           <!--For Https-->
           <!--<security mode="Transport">
             <transport clientCredentialType="None"/>
@@ -124,6 +122,8 @@
         </binding>
       </customBinding>
       <basicHttpsBinding>
+        <binding name="DslKurumServisSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="ChurnControlServiceSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
         <binding name="PstnBbkIptalSureSorgulaWSSoapBinding" receiveTimeout="00:05:00" maxReceivedMessageSize="2147483647" />
         <binding name="AboneDslamSifreSorguSoapBinding" receiveTimeout="00:05:00" maxReceivedMessageSize="2147483647" />
         <binding name="YeniHizmetNoSorgulaWSSoapBinding" receiveTimeout="00:05:00" maxReceivedMessageSize="2147483647" />
@@ -154,6 +154,8 @@
       </basicHttpsBinding>
     </bindings>
     <client>
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/ChurnControlService" binding="basicHttpsBinding" bindingConfiguration="ChurnControlServiceSoapBinding" contract="ChurnControlReference.ChurnControlService" name="ChurnControlService" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/DslKurumServis" binding="basicHttpsBinding" bindingConfiguration="DslKurumServisSoapBinding" contract="DSLOperatorReference.AdslKurumService" name="DslKurumServis" />
       <endpoint address="https://www.mobilexpress.com.tr/checkout/v7/FastCheckoutService.asmx" binding="customBinding" bindingConfiguration="FastCheckoutServiceSoap12" contract="MobilExpressServiceReference.FastCheckoutServiceSoap" name="FastCheckoutServiceSoap12" />
       <endpoint address="https://xdsliss.turktelekom.com.tr/services/AboneDslamSifreSorgu" binding="basicHttpsBinding" bindingConfiguration="AboneDslamSifreSorguSoapBinding" contract="DSLAMPasswordReference.AboneDslamSifreSorgu" name="AboneDslamSifreSorgu" />
       <endpoint address="https://xdsliss.turktelekom.com.tr/services/YeniHizmetNoSorgulaWS" binding="basicHttpsBinding" bindingConfiguration="YeniHizmetNoSorgulaWSSoapBinding" contract="GetNewSubscriberNoReference.YeniHizmetNoService" name="YeniHizmetNoSorgulaWS" />
