fixed minor issues

--- a/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
+++ b/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
@@ -252,7 +252,7 @@
     <Content Include="GenericCustomerService.svc" />
     <Content Include="NetspeedCustomerService.svc" />
     <Content Include="PartnerService.svc" />
-    <Content Include="Manual\Master ISS Web Servis Dokümanı TR.pdf" />
+    <None Include="Manual\Master ISS Web Servis Dokümanı TR.pdf" />
     <None Include="VersionHistory.txt" />
     <Content Include="Web.config" />
   </ItemGroup>
