--- a/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
+++ b/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
@@ -253,7 +253,7 @@
     <Content Include="NetspeedCustomerService.svc" />
     <Content Include="PartnerService.svc" />
     <Content Include="Manual\Master ISS Web Servis Dokümanı TR.docx" />
-    <None Include="Manual\Master ISS Web Servis Dokümanı TR.pdf" />
+    <Content Include="Manual\Master ISS Web Servis Dokümanı TR.pdf" />
     <None Include="VersionHistory.txt" />
     <Content Include="Web.config" />
   </ItemGroup>
