added new partner functions , client forms , client attachments , subscription list fixed extend package error (double package error)

--- a/RadiusR.API.Test_Unit/App.config
+++ b/RadiusR.API.Test_Unit/App.config
@@ -49,12 +49,8 @@
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://soap.netgsm.com.tr:8080/Sms_webservis/SMS"
-        binding="basicHttpBinding" bindingConfiguration="smsnnPortBinding"
-        contract="NetGsm.smsnn" name="smsnnPort" />
-      <endpoint address="http://localhost:56365/PartnerService.svc/PartnerService.svc"
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPartnerService"
-        contract="PartnerServiceReference.IPartnerService" name="WSHttpBinding_IPartnerService" />
+      <endpoint address="http://soap.netgsm.com.tr:8080/Sms_webservis/SMS" binding="basicHttpBinding" bindingConfiguration="smsnnPortBinding" contract="NetGsm.smsnn" name="smsnnPort" />
+      <endpoint address="http://localhost:56365/PartnerService.svc/PartnerService.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPartnerService" contract="PartnerServiceReference.IPartnerService" name="WSHttpBinding_IPartnerService" />
     </client>
   </system.serviceModel>
   <runtime>
@@ -70,6 +66,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Apis.Auth" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.48.0.0" newVersion="1.48.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
