--- a/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
+++ b/RadiusR.API.CustomerWebService/RadiusR.API.CustomerWebService.csproj
@@ -317,6 +317,9 @@
     <Compile Include="Requests\PartnerRequests\ListFromIDRequest.cs" />
     <Compile Include="Requests\PartnerRequests\NewCustomerRegisterRequest.cs" />
     <Compile Include="Requests\PartnerRequests\ParameterlessRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\PartnerClientAttachmentsRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\PartnerClientFormsRequest.cs" />
+    <Compile Include="Requests\PartnerRequests\PartnerSubscriptionsRequest.cs" />
     <Compile Include="Requests\PartnerRequests\RequestBase.cs" />
     <Compile Include="Requests\PartnerRequests\PaymentRequest.cs" />
     <Compile Include="Requests\PartnerRequests\SMSCodeRequest.cs" />
@@ -377,6 +380,9 @@
     <Compile Include="Responses\PartnerResponses\KeyValueListResponse.cs" />
     <Compile Include="Responses\PartnerResponses\NewCustomerRegisterResponse.cs" />
     <Compile Include="Responses\PartnerResponses\PaginationResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\PartnerClientAttachmentsResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\PartnerClientFormsResponse.cs" />
+    <Compile Include="Responses\PartnerResponses\PartnerSubscriptionsResponse.cs" />
     <Compile Include="Responses\PartnerResponses\PaymentResponse.cs" />
     <Compile Include="Responses\PartnerResponses\ResponseValidationBase.cs" />
     <Compile Include="Responses\PartnerResponses\SaleAllowanceListResponse.cs" />
